# litemcp

./: README.md  pyproject.toml
examples/agent_sdk/: main.py  mcp-config.json
examples/langchain/: main.py
examples/llm/: mcp-config.json  openai_call.py
litemcp/: agent_sdk.py  config.py  lanchain_sdk.py  manager.py  server.py
